bad/2020-07-06/15-37/7.1/build.err
run.c: In function ‘snipe’:
run.c:9:12: error: ‘curst’ undeclared (first use in this function)
 for(l = 0; curst[l] != '\0';l++){
            ^~~~~
run.c:9:12: note: each undeclared identifier is reported only once for each function it appears in